--- a/BioVis/BioVis_BMC_template/ligand.tex
+++ b/BioVis/BioVis_BMC_template/ligand.tex
@@ -606,7 +606,10 @@ Another interesting behavior can be seen with the same setup (see Figure~\ref{fi
   \caption{\label{fig:case_example1} {\color{red}TODO} ... 2] scatterplot set to show distance from the active site (vertical axis) over time (horizontal asix)}
 \end{figure}
 
-Another information can be obtained when we add additional scatter plot with information about hydrophobicity profile along the ligand trajectory (see Figure~\ref{fig:case_hydro_distance}). Since both scatter plots are interactively connected, the biochemist could easily confirm the property common for most of the proteins. Namely the fact that the part of the trajectory in greater distance from the active site (\ie nearby surface) is surrounded by hydrofilic amino acids while the core of the protein is mostly created by highly hydrophobic amino acid. 
+Another information can be obtained when we add additional scatter plot with information about hydrophobicity profile along the ligand trajectory (see Figure~\ref{fig:case_hydro_distance}). 
+Since both scatter plots are interactively connected, the biochemist could select the low hydrophobicity values and immediately observed at which distance they are presented with respect to the ligand trajectory. 
+The results confirmed the behavior common for most of the proteins.
+Namely the fact that the part of the trajectory in greater distance from the active site (\ie nearby surface) is surrounded by hydrofilic amino acids while when the ligand reaches the core of the protein it is surrounded by highly hydrophobic amino acid.
 
 \begin{figure}[htb]
 	\centering
