--- a/BioVis/BioVis_BMC_template/ligand.tex
+++ b/BioVis/BioVis_BMC_template/ligand.tex
@@ -375,28 +375,29 @@ These tools are able to produce the information about time evolution of individu
 
 However, this bottleneck can be to some extent influenced by the passing ligand and this influence is also determined by the physico-chemical properties of the ligand and the bottleneck-lining amino acids (e.g., hydrophobicity or partial charges of individual atoms).
 To reveal such dependencies, it requires the involvement and experience of the domain expert who has to study the ligand trajectory captured in the molecular dynamics simulation.
-And for such task a proper visual representation and guidance through such large data is substantial.
+%And for such task a proper visual representation and guidance through such large data is substantial.
 
 In protein engineering, all these efforts can finally lead to the detection of amino acids along the ligand trajectory which caused some problems, i.e., were the key players in situations when the ligand got stuck.
 Such amino acids are then the best candidates for subsequent mutation of the protein chain when these amino acids are replaced by more suitable ones wrt. their size and properties.
 On the other hand, in drug design the aim is to propose modifications of the ligand to increase the binding likelihood in order to design a better drug produced from this ligand.
 
 The input data is obtained from the simulations of molecular dynamics which contains the movements of the protein and one or more ligands.
-Ligands can follow two main routes -- they can be transported from the outside environment to the protein active site or vice versa (after the desired reaction the product leaves the protein).
+Ligands can follow different routes -- they can be transported from the outside environment to the protein active site or vice versa (after the desired reaction the product leaves the protein).
 
 The length of the simulations may vary from few hundreds to hundreds of thousands of time steps.  
 This depends namely on the ligand velocity and its ability to find the proper path to the active site.
-Figure \ref{fig:lig_movement} shows an example of a ligand trajectory consisting of $50.000$ time steps. 
 
-\begin{figure}[htb]
+\begin{figure}[b!]
 	\centering
   \includegraphics[width=0.95\linewidth]{img/lig_movement.png}
-  \caption{\label{fig:lig_movement} Ligand trajectory (gray) for a simulation containing $50.000$ time steps.}
+  \caption{\label{fig:lig_movement} Ligand trajectory (gray) for a simulation containing $50.000$ time steps. The protein chain is depicted in blue.}
 \end{figure}
 
 Long simulations can often contain many time steps when the ligand followed an impasse -- it tried to find the proper entrance point to the protein (tunnel gorge) or entered a wrong tunnel and had to return.
 Such parts of the simulation could be of less interest so that the user should be provided with a possibility to filter them out and focus only on the interesting parts.
-
+Figure \ref{fig:lig_movement} shows such example when the ligand trajectory consists of $50.000$ time steps. 
+It is visible that in most of the time the ligand travels around the protein chain (depicted in blue).
+Therefore, only a fraction of the trajectory captures its transportation to the active site.
 
 \section*{Method}
 \subsection*{Overview + workflow - BK}
